Automatically deploy jenkins jobs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,7 @@ S3method("[",jeroen)
 S3method("[[",jeroen)
 S3method(names,jeroen)
 S3method(print,jeroen)
+export(config_template)
 export(jenkins)
+export(sync_jenkins_ropensci)
 import(curl)
