Automatically create a view for each author in Jenkins

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Imports: 
     curl,
-    jsonlite
+    jsonlite,
+    stringi
 LazyData: true
 RoxygenNote: 6.1.1
