--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,9 @@ Title: Simple Jenkins Client for R
 Version: 0.1
 Author: Jeroen Ooms
 Maintainer: Jeroen Ooms <jeroen@berkeley.edu>
-Description: Managing jobs and builds on your jenkins server. Create or 
-    update projects, control builds and queues, inspect logs, and much more.
+Description: Manage jobs and builds on your Jenkins CI server <https://jenkins.io/>. 
+    Create and edit projects, trigger builds, manage build queues, download build
+    logs, and much more.
 License: MIT + file LICENSE
 URL: https://docs.ropensci.org/jenkins/
 BugReports: https://github.com/ropensci/jenkins/issues
