--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: jenkins
 Type: Package
-Title: Simple Jenkins Client for R
+Title: Simple Jenkins Client
 Version: 1.0
 Author: Jeroen Ooms
 Maintainer: Jeroen Ooms <jeroen@berkeley.edu>
 Description: Manage jobs and builds on your Jenkins CI server <https://jenkins.io/>. 
-    Create and edit projects, trigger builds, manage build queues, download build
-    logs, and much more.
+    Create and edit projects, schedule builds, manage the queue, download build logs,
+    and much more.
 License: MIT + file LICENSE
 URL: https://docs.ropensci.org/jenkins/ (website),
     https://github.com/ropensci/jenkins
